fix: underline links in panel text (#8219)
Links were almost invisible in the text of panels, this PR adds an underline. (related: #8216)

I believe links in general should be more obvious (e.g. with a blue color), but that's for another PR.

--- a/scss/_off.scss
+++ b/scss/_off.scss
@@ -1425,6 +1425,12 @@ a.panel_title {
 .accordion-navigation a {
   text-decoration:none !important;
 }
+.panel_title a {
+  text-decoration:none !important;
+}
+.panel_text a {
+  text-decoration:underline !important;
+}
 .pagination a {
   text-decoration:none !important;
 }
